os/filestore: sort objects using escaped strings

Similarly how the bluestore does. And we want this to have the same
order of object listing for bluestore and filestore osds in a mixed
cluster.

Fixes: https://tracker.ceph.com/issues/43174
Signed-off-by: Mykola Golub <mgolub@suse.com>